Experiment/Experiment_1/parser.output
Terminals which are not used

   FOR
   SWITCH
   CASE
   COLON
   DEFAULT
   INCREMENT
   DECREMENT
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   ARRAY_DEF
   ARRAY_CALL
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ


State 62 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID
   11       | VarDec LB INT RB

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: /* empty */
   19        | Stmt StmList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt
   26     | BREAK SEMI
   27     | CONTINUE SEMI

   28 DefList: /* empty */
   29        | Def DefList
   30        | error SEMI

   31 Def: Specifier DecList SEMI

   32 DecList: Dec
   33        | Dec COMMA DecList

   34 Dec: VarDec
   35    | VarDec ASSIGNOP Exp

   36 Exp: Exp ASSIGNOP Exp
   37    | Exp LB Exp RB
   38    | Exp AND Exp
   39    | Exp OR Exp
   40    | Exp RELOP Exp
   41    | Exp PLUS Exp
   42    | Exp MINUS Exp
   43    | Exp STAR Exp
   44    | Exp DIV Exp
   45    | LP Exp RP
   46    | MINUS Exp
   47    | NOT Exp
   48    | DPLUS Exp
   49    | Exp DPLUS
   50    | ID LP Args RP
   51    | ID LP RP
   52    | ID
   53    | INT
   54    | FLOAT
   55    | CHAR

   56 Args: Exp COMMA Args
   57     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 30
INT (258) 11 53
ID (259) 10 12 13 50 51 52
RELOP (260) 40
TYPE (261) 7
FLOAT (262) 54
CHAR (263) 55
DPLUS (264) 48 49
LP (265) 12 13 23 24 25 45 50 51
RP (266) 12 13 23 24 25 45 50 51
LC (267) 17
RC (268) 17
LB (269) 11 37
RB (270) 11 37
SEMI (271) 4 6 20 22 26 27 30 31
COMMA (272) 9 15 33 56
PLUS (273) 41
MINUS (274) 42 46
STAR (275) 43
DIV (276) 44
ASSIGNOP (277) 35 36
AND (278) 38
OR (279) 39
NOT (280) 47
IF (281) 23 24
ELSE (282) 24
WHILE (283) 25
RETURN (284) 22
FOR (285)
SWITCH (286)
CASE (287)
COLON (288)
DEFAULT (289)
BREAK (290) 26
CONTINUE (291) 27
INCREMENT (292)
DECREMENT (293)
EXT_DEF_LIST (294)
EXT_VAR_DEF (295)
FUNC_DEF (296)
ARRAY_DEF (297)
ARRAY_CALL (298)
FUNC_DEC (299)
EXT_DEC_LIST (300)
PARAM_LIST (301)
PARAM_DEC (302)
VAR_DEF (303)
DEC_LIST (304)
DEF_LIST (305)
COMP_STM (306)
STM_LIST (307)
EXP_STMT (308)
IF_THEN (309)
IF_THEN_ELSE (310)
FUNC_CALL (311)
ARGS (312)
FUNCTION (313)
PARAM (314)
ARG (315)
CALL (316)
LABEL (317)
GOTO (318)
JLT (319)
JLE (320)
JGT (321)
JGE (322)
EQ (323)
NEQ (324)
UMINUS (325)
LOWER_THEN_ELSE (326)


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
program (73)
    on left: 1, on right: 0
ExtDefList (74)
    on left: 2 3, on right: 1 3
ExtDef (75)
    on left: 4 5 6, on right: 3
Specifier (76)
    on left: 7, on right: 4 5 16 31
ExtDecList (77)
    on left: 8 9, on right: 4 9
VarDec (78)
    on left: 10 11, on right: 8 9 11 16 34 35
FuncDec (79)
    on left: 12 13, on right: 5
VarList (80)
    on left: 14 15, on right: 12 15
ParamDec (81)
    on left: 16, on right: 14 15
CompSt (82)
    on left: 17, on right: 5 21
StmList (83)
    on left: 18 19, on right: 17 19
Stmt (84)
    on left: 20 21 22 23 24 25 26 27, on right: 19 23 24 25
DefList (85)
    on left: 28 29 30, on right: 17 29
Def (86)
    on left: 31, on right: 29
DecList (87)
    on left: 32 33, on right: 31 33
Dec (88)
    on left: 34 35, on right: 32 33
Exp (89)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55, on right: 20 22 23 24 25 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 56 57
Args (90)
    on left: 56 57, on right: 50 56


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   11 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 16
    COMMA  shift, and go to state 17

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 18

    CompSt  go to state 19


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 20

    Specifier  go to state 21
    VarList    go to state 22
    ParamDec   go to state 23


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

   11 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 24


state 17

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 25

    ExtDecList  go to state 26
    VarDec      go to state 12


state 18

   17 CompSt: LC . DefList StmList RC

    error  shift, and go to state 27
    TYPE   shift, and go to state 2

    INT       reduce using rule 28 (DefList)
    ID        reduce using rule 28 (DefList)
    FLOAT     reduce using rule 28 (DefList)
    CHAR      reduce using rule 28 (DefList)
    DPLUS     reduce using rule 28 (DefList)
    LP        reduce using rule 28 (DefList)
    LC        reduce using rule 28 (DefList)
    RC        reduce using rule 28 (DefList)
    MINUS     reduce using rule 28 (DefList)
    NOT       reduce using rule 28 (DefList)
    IF        reduce using rule 28 (DefList)
    WHILE     reduce using rule 28 (DefList)
    RETURN    reduce using rule 28 (DefList)
    BREAK     reduce using rule 28 (DefList)
    CONTINUE  reduce using rule 28 (DefList)

    Specifier  go to state 28
    DefList    go to state 29
    Def        go to state 30


state 19

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 20

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 21

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 25

    VarDec  go to state 31


state 22

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 32


state 23

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 33

    $default  reduce using rule 14 (VarList)


state 24

   11 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 34


state 25

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 26

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 27

   30 DefList: error . SEMI

    SEMI  shift, and go to state 35


state 28

   31 Def: Specifier . DecList SEMI

    ID  shift, and go to state 25

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


state 29

   17 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 39
    ID        shift, and go to state 40
    FLOAT     shift, and go to state 41
    CHAR      shift, and go to state 42
    DPLUS     shift, and go to state 43
    LP        shift, and go to state 44
    LC        shift, and go to state 18
    MINUS     shift, and go to state 45
    NOT       shift, and go to state 46
    IF        shift, and go to state 47
    WHILE     shift, and go to state 48
    RETURN    shift, and go to state 49
    BREAK     shift, and go to state 50
    CONTINUE  shift, and go to state 51

    $default  reduce using rule 18 (StmList)

    CompSt   go to state 52
    StmList  go to state 53
    Stmt     go to state 54
    Exp      go to state 55


state 30

   29 DefList: Def . DefList

    error  shift, and go to state 27
    TYPE   shift, and go to state 2

    INT       reduce using rule 28 (DefList)
    ID        reduce using rule 28 (DefList)
    FLOAT     reduce using rule 28 (DefList)
    CHAR      reduce using rule 28 (DefList)
    DPLUS     reduce using rule 28 (DefList)
    LP        reduce using rule 28 (DefList)
    LC        reduce using rule 28 (DefList)
    RC        reduce using rule 28 (DefList)
    MINUS     reduce using rule 28 (DefList)
    NOT       reduce using rule 28 (DefList)
    IF        reduce using rule 28 (DefList)
    WHILE     reduce using rule 28 (DefList)
    RETURN    reduce using rule 28 (DefList)
    BREAK     reduce using rule 28 (DefList)
    CONTINUE  reduce using rule 28 (DefList)

    Specifier  go to state 28
    DefList    go to state 56
    Def        go to state 30


state 31

   11 VarDec: VarDec . LB INT RB
   16 ParamDec: Specifier VarDec .

    LB  shift, and go to state 16

    $default  reduce using rule 16 (ParamDec)


state 32

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 33

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 21
    VarList    go to state 57
    ParamDec   go to state 23


state 34

   11 VarDec: VarDec LB INT RB .

    $default  reduce using rule 11 (VarDec)


state 35

   30 DefList: error SEMI .

    $default  reduce using rule 30 (DefList)


state 36

   11 VarDec: VarDec . LB INT RB
   34 Dec: VarDec .
   35    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 16
    ASSIGNOP  shift, and go to state 58

    $default  reduce using rule 34 (Dec)


state 37

   31 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 59


state 38

   32 DecList: Dec .
   33        | Dec . COMMA DecList

    COMMA  shift, and go to state 60

    $default  reduce using rule 32 (DecList)


state 39

   53 Exp: INT .

    $default  reduce using rule 53 (Exp)


state 40

   50 Exp: ID . LP Args RP
   51    | ID . LP RP
   52    | ID .

    LP  shift, and go to state 61

    $default  reduce using rule 52 (Exp)


state 41

   54 Exp: FLOAT .

    $default  reduce using rule 54 (Exp)


state 42

   55 Exp: CHAR .

    $default  reduce using rule 55 (Exp)


state 43

   48 Exp: DPLUS . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 62


state 44

   45 Exp: LP . Exp RP

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 63


state 45

   46 Exp: MINUS . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 64


state 46

   47 Exp: NOT . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 65


state 47

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 66


state 48

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 67


state 49

   22 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 68


state 50

   26 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 69


state 51

   27 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 70


state 52

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


state 53

   17 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 71


state 54

   19 StmList: Stmt . StmList

    INT       shift, and go to state 39
    ID        shift, and go to state 40
    FLOAT     shift, and go to state 41
    CHAR      shift, and go to state 42
    DPLUS     shift, and go to state 43
    LP        shift, and go to state 44
    LC        shift, and go to state 18
    MINUS     shift, and go to state 45
    NOT       shift, and go to state 46
    IF        shift, and go to state 47
    WHILE     shift, and go to state 48
    RETURN    shift, and go to state 49
    BREAK     shift, and go to state 50
    CONTINUE  shift, and go to state 51

    $default  reduce using rule 18 (StmList)

    CompSt   go to state 52
    StmList  go to state 72
    Stmt     go to state 54
    Exp      go to state 55


state 55

   20 Stmt: Exp . SEMI
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    LB        shift, and go to state 75
    SEMI      shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83


state 56

   29 DefList: Def DefList .

    $default  reduce using rule 29 (DefList)


state 57

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 58

   35 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 84


state 59

   31 Def: Specifier DecList SEMI .

    $default  reduce using rule 31 (Def)


state 60

   33 DecList: Dec COMMA . DecList

    ID  shift, and go to state 25

    VarDec   go to state 36
    DecList  go to state 85
    Dec      go to state 38


state 61

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    RP     shift, and go to state 86
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp   go to state 87
    Args  go to state 88


state 62

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   48    | DPLUS Exp .
   49    | Exp . DPLUS

    DPLUS  shift, and go to state 74
    LB     shift, and go to state 75

    LB        [reduce using rule 48 (Exp)]
    $default  reduce using rule 48 (Exp)


state 63

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   45    | LP Exp . RP
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    RP        shift, and go to state 89
    LB        shift, and go to state 75
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83


state 64

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   46    | MINUS Exp .
   49    | Exp . DPLUS

    DPLUS  shift, and go to state 74
    LB     shift, and go to state 75

    LB        [reduce using rule 46 (Exp)]
    $default  reduce using rule 46 (Exp)


state 65

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   47    | NOT Exp .
   49    | Exp . DPLUS

    DPLUS  shift, and go to state 74
    LB     shift, and go to state 75

    LB        [reduce using rule 47 (Exp)]
    $default  reduce using rule 47 (Exp)


state 66

   23 Stmt: IF LP . Exp RP Stmt
   24     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 90


state 67

   25 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 91


state 68

   22 Stmt: RETURN Exp . SEMI
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    LB        shift, and go to state 75
    SEMI      shift, and go to state 92
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83


state 69

   26 Stmt: BREAK SEMI .

    $default  reduce using rule 26 (Stmt)


state 70

   27 Stmt: CONTINUE SEMI .

    $default  reduce using rule 27 (Stmt)


state 71

   17 CompSt: LC DefList StmList RC .

    $default  reduce using rule 17 (CompSt)


state 72

   19 StmList: Stmt StmList .

    $default  reduce using rule 19 (StmList)


state 73

   40 Exp: Exp RELOP . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 93


state 74

   49 Exp: Exp DPLUS .

    $default  reduce using rule 49 (Exp)


state 75

   37 Exp: Exp LB . Exp RB

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 94


state 76

   20 Stmt: Exp SEMI .

    $default  reduce using rule 20 (Stmt)


state 77

   41 Exp: Exp PLUS . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 95


state 78

   42 Exp: Exp MINUS . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 96


state 79

   43 Exp: Exp STAR . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 97


state 80

   44 Exp: Exp DIV . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 98


state 81

   36 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 99


state 82

   38 Exp: Exp AND . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 100


state 83

   39 Exp: Exp OR . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 101


state 84

   35 Dec: VarDec ASSIGNOP Exp .
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    LB        shift, and go to state 75
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83

    $default  reduce using rule 35 (Dec)


state 85

   33 DecList: Dec COMMA DecList .

    $default  reduce using rule 33 (DecList)


state 86

   51 Exp: ID LP RP .

    $default  reduce using rule 51 (Exp)


state 87

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS
   56 Args: Exp . COMMA Args
   57     | Exp .

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    LB        shift, and go to state 75
    COMMA     shift, and go to state 102
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83

    $default  reduce using rule 57 (Args)


state 88

   50 Exp: ID LP Args . RP

    RP  shift, and go to state 103


state 89

   45 Exp: LP Exp RP .

    $default  reduce using rule 45 (Exp)


state 90

   23 Stmt: IF LP Exp . RP Stmt
   24     | IF LP Exp . RP Stmt ELSE Stmt
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    RP        shift, and go to state 104
    LB        shift, and go to state 75
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83


state 91

   25 Stmt: WHILE LP Exp . RP Stmt
   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    RP        shift, and go to state 105
    LB        shift, and go to state 75
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83


state 92

   22 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 22 (Stmt)


state 93

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   40    | Exp RELOP Exp .
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    DPLUS  shift, and go to state 74
    LB     shift, and go to state 75
    PLUS   shift, and go to state 77
    MINUS  shift, and go to state 78
    STAR   shift, and go to state 79
    DIV    shift, and go to state 80

    LB        [reduce using rule 40 (Exp)]
    $default  reduce using rule 40 (Exp)


state 94

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   37    | Exp LB Exp . RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    LB        shift, and go to state 75
    RB        shift, and go to state 106
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83


state 95

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   41    | Exp PLUS Exp .
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    DPLUS  shift, and go to state 74
    LB     shift, and go to state 75
    STAR   shift, and go to state 79
    DIV    shift, and go to state 80

    LB        [reduce using rule 41 (Exp)]
    $default  reduce using rule 41 (Exp)


state 96

   36 Exp: Exp . ASSIGNOP Exp
   37    | Exp . LB Exp RB
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   42    | Exp MINUS Exp .
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   49    | Exp . DPLUS

    DPLUS  shift, and go to state 74
    LB     shift, and go to state 75
    STAR   shift, and go to state 79
    DIV    shift, and go to state 80

    LB        [reduce using rule 42 (Exp)]
    $default  reduce using rule 42 (Exp)


state 97
